# MA-FrameworkLatency

./: .gitignore  README.md  fullscreen_tester.py  fyalmd.py  program_tester.ipynb  start_fullscreen_tester.sh  start_measurement.sh  start_measurement_SDL.sh  start_measurement_glumpy.sh  start_measurement_sep.sh  start_measurement_series.sh  start_measurement_series_c-gdi32-readers.sh  start_measurement_series_glumpy.sh  start_measurement_series_pyreaders.sh  start_measurements_sep.sh  start_program_tester.sh  test.csv  test.py  test_default.psyexp  test_default_lastrun.py  test_yalmd.py  vsync_tester.py  yalmd.py
analysis/: 01_program_validation.ipynb  02_refresh_rates.ipynb  03_size.ipynb  04_fullscreen.ipynb  04_vsync.ipynb  05_results.ipynb  05_vsync.ipynb  06_game_engines.ipynb  06_results.ipynb  07_game_engines.ipynb  07_psycho.ipynb  161123_measurements.ipynb  211123_measurements.ipynb  SDL_new-attempt_1002.ipynb  additional_latency.ipynb  all_first_200_2802.ipynb  analysis.ipynb  analysis_final.ipynb  c-gdi32_readers.ipynb  c-gdi32_readers_vsync.ipynb  colors.py  dimensions.ipynb  evaluation_newer_andi.ipynb  first_plots_pilot.ipynb  fullscreen_prestudy.ipynb  mouse_latency.ipynb  new_attempt_windup.ipynb  new_setup.ipynb  no_vsync.ipynb  plots.ipynb  progams_selection.ipynb  program_validation.ipynb  python_readers.ipynb  smalls.ipynb  validation.ipynb  vsync_rect_bug copy.ipynb  vsync_rect_bug.ipynb  vsync_tester.ipynb  windup_reader.ipynb
data/: 1cae8d05-62aa-4c41-a9d3-79e6984f6629.csv  (+15 more)
pixel_readers/directX/directX/: CMakeLists.txt  directX.cpp  directX.h
(+13190 files in other folders)
